[tool.poetry]
name = "airbnb-clone-backend"
version = "0.1.0"
description = ""
authors = ["Nova <bushdog094@gmail.com>"]
license = "MIT"
readme = "README.md"




[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"



djangorestframework = "^3.15.2"
pyjwt = "^2.10.1"
django-environ = "^0.11.2"
django-cors-headers = "^4.7.0"
requests = "^2.32.3"
prettier = "^0.0.7"
black = "^25.1.0"
dj-database-url = "<2.3.0"
psycopg2-binary = "^2.9.10"
whitenoise = {extras = ["brotli"], version = "^6.9.0"}
gunicorn = "^23.0.0"
uvicorn = "^0.34.0"
sentry-sdk = {extras = ["django"], version = "^2.24.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
